fixed spacing on add shift page

--- a/src/app/AdminNavView/NewShiftPage/stylesheet.css
+++ b/src/app/AdminNavView/NewShiftPage/stylesheet.css
@@ -65,10 +65,18 @@
   border-radius: 12px;
   border: 1px solid var(--Bagel-Rescue-Blue);
   width: 100%;
-  height: 30%;
+  height: 100%;
 }
 
 .field-input-smaller {
+  padding: 1em;
+  border-radius: 12px;
+  border: 1px solid var(--Bagel-Rescue-Blue);
+  width: 100%;
+  height: 30%;
+}
+
+.additional-info-textarea {
   padding: 1em;
   border-radius: 12px;
   border: 1px solid var(--Bagel-Rescue-Blue);
